--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 <!DOCTYPE html>
+<html>
+<head>
+  <meta charset = "utf-8">
+  <title> LucBuy.com </title>
+  <!--<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anta&display=swap" rel="stylesheet">-->
+</head>
+ <body>
+   <h1> teste de Titulo Principalaaaaaaaaa</h1>
+</body>
+</html>
