--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html>
 <head>
   <meta charset = "utf-8">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+  integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel = "stylesheet" type = "text/css" href = "css/style.css"
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Anta&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anta&display=swap" rel="stylesheet">
   <title> LucBuy.com </title>
 </head>
  <body>
    <h1> Lucbuy</h1>
    <p> Sua Melhor Loja Compra!!!!</p>
+   <i class="fa-solid fa-cart-shopping"></i>
 </body>
 </html>
