--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
   <title> LucBuy.com </title>
 </head>
  <body>
-   <h1> Lucbuy</h1>
-   <p> Sua Melhor Loja Compra!!!!</p>
+   <h1>Lucbuy</h1>
    <i class="fa-solid fa-cart-shopping"></i>
+   <p> Sua Melhor Loja Compra!!!!</p>
+   <div id="primeira"></div>
+   <div id="segunda"></div>
+   <div id="branco"></div>
+   <div id="terceira"></div>
 </body>
 </html>
