--- a/index.html
+++ b/index.html
@@ -14,9 +14,18 @@
    <h1>Lucbuy</h1>
    <i class="fa-solid fa-cart-shopping"></i>
    <p> Sua Melhor Loja Compra!!!!</p>
-   <div id="primeira"></div>
-   <div id="segunda"></div>
-   <div id="branco"></div>
-   <div id="terceira"></div>
+    <div class ="container">
+     <nav>
+       <div class ="nav-container">
+         <img id ="logo" src ="img/logo.png" alt ="Imagem Da Logo">
+         <ul>
+           <li><a href ="#"> Visualizar Compra</a></li>
+           <li><a href ="#"> Ajuda</a></li>
+           <li><a href ="#"> Contato</a></li>
+         </ul>
+       </div>
+     </nav>
+   </div>
+
 </body>
 </html>
